# course_quality_detector

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt
configs/: config.yaml
course_quality_detector/: __init__.py  analysis.py  cli.py  heuristics.py
examples/: feedback.jsonl
rosters/: english246.txt
scripts/: assign_identity.py  build_roster.py  face_gallery.py  metrics.py  multi_video_attendance.py  quick_attendance.py  report.py  run_pipeline.py  slice_videos.py
