[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course-quality-detector"
version = "0.1.0"
description = "Simple CLI scaffold for evaluating course quality from feedback."
authors = [{ name = "Course Quality Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
course-quality-detector = "course_quality_detector.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
